two-way connection check working. [only happens once at the start] starting to delete obsolete printlns

--- a/Multimeter App/src/redesigned_gui.fxml
+++ b/Multimeter App/src/redesigned_gui.fxml
@@ -62,7 +62,7 @@
                                     <Insets left="210.0" top="35.0" />
                                  </GridPane.margin>
                               </Button>
-                              <ComboBox fx:id="sampleRate" minHeight="-Infinity" minWidth="-Infinity" onAction="#selectSampleRate" prefHeight="28.0" prefWidth="190.0" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                              <ComboBox fx:id="sampleRate" disable="true" minHeight="-Infinity" minWidth="-Infinity" onAction="#selectSampleRate" prefHeight="28.0" prefWidth="190.0" GridPane.rowIndex="3" GridPane.valignment="TOP">
                                  <GridPane.margin>
                                     <Insets left="125.0" top="30.0" />
                                  </GridPane.margin>
@@ -140,7 +140,7 @@
                                     <Insets left="81.0" top="15.0" />
                                  </GridPane.margin>
                               </Button>
-                              <ComboBox fx:id="brightnessLevel" minHeight="-Infinity" minWidth="-Infinity" onAction="#selectBrightnessLevel" prefHeight="28.0" prefWidth="113.0" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                              <ComboBox fx:id="brightnessLevel" disable="true" minHeight="-Infinity" minWidth="-Infinity" onAction="#selectBrightnessLevel" prefHeight="28.0" prefWidth="113.0" GridPane.rowIndex="3" GridPane.valignment="TOP">
                                  <GridPane.margin>
                                     <Insets left="10.0" top="30.0" />
                                  </GridPane.margin>
